--- a/JupNot/decorator.ipynb
+++ b/JupNot/decorator.ipynb
@@ -24,14 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-5 3 4 8 10 11\n"
+      "-5 3 4 8 10 11\n",
+      "<function sort_list.<locals>.wrapper_quick_sort at 0x7fb07496eb90>\n"
      ]
     }
    ],
@@ -51,7 +52,8 @@
     "    lst = [int(i) for i in s.split()]\n",
     "    return lst\n",
     "lst = get_list(input())\n",
-    "print(*lst)"
+    "print(*lst)\n",
+    "print(get_list)"
    ]
   },
   {
@@ -106,7 +108,7 @@
     "    return lst       \n",
     "\n",
     "lst = get_list(input())\n",
-    "print(lst)"
+    "print(*lst)"
    ]
   },
   {
@@ -133,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1252695959999528"
+       "0.24089509199984604"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
    "source": [
     "import timeit\n",
     "\n",
-    "timeit.timeit(\"\"\"def quick_sort(s):\n",
+    "timeit.timeit(\"\"\"def quick_sort(s = [8,11,-5,4,3,10]):\n",
     "    if len(s) < 2:\n",
     "        return s\n",
     "    else:\n",
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +176,7 @@
       "   Ordered by: standard name\n",
       "\n",
       "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
-      "        1    0.000    0.000    0.000    0.000 1602679508.py:11(bublle_sort)\n",
+      "        1    0.000    0.000    0.000    0.000 234251660.py:11(bublle_sort)\n",
       "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\n",
       "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\n",
       "        1    0.000    0.000    0.000    0.000 {built-in method builtins.len}\n",
@@ -186,9 +188,9 @@
       "   Ordered by: standard name\n",
       "\n",
       "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
-      "      9/1    0.000    0.000    0.000    0.000 1602679508.py:2(quick_sort)\n",
-      "        4    0.000    0.000    0.000    0.000 1602679508.py:7(<listcomp>)\n",
-      "        4    0.000    0.000    0.000    0.000 1602679508.py:8(<listcomp>)\n",
+      "      9/1    0.000    0.000    0.000    0.000 234251660.py:2(quick_sort)\n",
+      "        4    0.000    0.000    0.000    0.000 234251660.py:7(<listcomp>)\n",
+      "        4    0.000    0.000    0.000    0.000 234251660.py:8(<listcomp>)\n",
       "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\n",
       "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\n",
       "       13    0.000    0.000    0.000    0.000 {built-in method builtins.len}\n",
@@ -217,21 +219,149 @@
     "                s[k],s[k + 1] = s[k + 1], s[k]\n",
     "    return s\n",
     "\n",
-    "cProfile.run('bublle_sort([8, 11, -5, 4, 3, 10])')\n",
-    "cProfile.run('quick_sort([8, 11, -5, 4, 3, 10])')"
+    "cProfile.run('bublle_sort(s = [8, 11, -5, 4, 3, 10])')\n",
+    "cProfile.run('quick_sort(s = [8, 11, -5, 4, 3, 10])')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Подвиг 4. Вводятся две строки из слов (слова записаны через пробел). Объявите функцию, которая преобразовывает эти две строки в два списка слов и возвращает эти списки.\n",
+    "\n",
+    "Определите декоратор для этой функции, который из двух списков формирует словарь, в котором ключами являются слова из первого списка, а значениями - соответствующие элементы из второго списка. Полученный словарь должен возвращаться при вызове декоратора.\n",
+    "\n",
+    "Примените декоратор к первой функции и вызовите ее для введенных строк. Результат (словарь d) отобразите на экране командой:\n",
+    "\n",
+    "print(*sorted(d.items()))\n",
+    "\n",
+    "Sample Input:\n",
+    "\n",
+    "house river tree car\n",
+    "дом река дерево машина\n",
+    "\n",
+    "Sample Output:\n",
+    "\n",
+    "('car', 'машина') ('house', 'дом') ('river', 'река') ('tree', 'дерево')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('дерево', 'tree') ('дом', 'house') ('машина', 'car') ('река', 'river')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_dict(make_list):\n",
+    "    def wrapper_dict(l_keys,l_values):\n",
+    "        l_keys,l_values = make_list(l_keys, l_values)\n",
+    "        d = {}\n",
+    "        for i, k in enumerate(l_keys):\n",
+    "            d[k] = l_values[i] \n",
+    "        return d\n",
+    "        \n",
+    "    return wrapper_dict\n",
+    "\n",
+    "@make_dict\n",
+    "def make_list(string_keys:str, string_values:str) -> list:\n",
+    "    l_keys = [i for i in string_keys.split()]\n",
+    "    l_values =[i for i in string_values.split()]\n",
+    "    return l_keys, l_values\n",
+    "\n",
+    "l_keys,l_values = input(), input()\n",
+    "print(*sorted(make_list(l_keys, l_values).items()))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['дом', 'река', 'дерево', 'машина']\n",
+      "['house', 'river', 'tree', 'car']\n",
+      "{'дом': 'дом', 'река': 'река', 'дерево': 'дерево', 'машина': 'машина'}\n",
+      "['PrettyPrinter',\n",
+      " '_StringIO',\n",
+      " '__all__',\n",
+      " '__builtins__',\n",
+      " '__cached__',\n",
+      " '__doc__',\n",
+      " '__file__',\n",
+      " '__loader__',\n",
+      " '__name__',\n",
+      " '__package__',\n",
+      " '__spec__',\n",
+      " '_builtin_scalars',\n",
+      " '_collections',\n",
+      " '_dataclasses',\n",
+      " '_perfcheck',\n",
+      " '_recursion',\n",
+      " '_safe_key',\n",
+      " '_safe_tuple',\n",
+      " '_sys',\n",
+      " '_types',\n",
+      " '_wrap_bytes_repr',\n",
+      " 'isreadable',\n",
+      " 'isrecursive',\n",
+      " 'pformat',\n",
+      " 'pp',\n",
+      " 'pprint',\n",
+      " 're',\n",
+      " 'saferepr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "def make_list(string_keys:str, string_values:str) -> list:\n",
+    "    l_keys = [i for i in string_keys.split()]\n",
+    "    l_values =[i for i in string_values.split()]\n",
+    "    return l_keys, l_values\n",
+    "l_keys,l_values = make_list(input(),input())\n",
+    "print(k,v,sep='\\n')\n",
+    "#print(make_list(input(),input()))\n",
+    "def wrapper_dict(l_keys,l_values):\n",
+    "        #l_keys,l_values = make_list(l_keys, l_values)\n",
+    "        d = {}\n",
+    "        for i, k in enumerate(l_keys):\n",
+    "            d[k] = l_values[i] \n",
+    "        return d\n",
+    "print(wrapper_dict(l_keys,l_values))\n",
+    "#pprint.pprint(locals())\n",
+    "pprint.pprint(dir(pprint))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def wrapper_dict(l_keys,l_values):\n",
+    "        l_keys,l_values = make_list(l_keys, l_values)\n",
+    "        d = {}\n",
+    "        d = d.fromkeys(l_keys,l_values)\n",
+    "        return d"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit ('3.11.0')",
+   "display_name": "Python 3.10.8 64-bit ('workenv3.10')",
    "language": "python",
    "name": "python3"
   },
@@ -245,12 +375,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9e67aa080b8c1c4d6e24d2b5c9e4edecc235517ee5352f63b29e74ed8b9c94da"
+    "hash": "26b4996cd3467b114e8c29eef76c6165ac584fd4bc9cc1c8693779099c4e15d4"
    }
   }
  },
