--- a/JupNot/test.ipynb
+++ b/JupNot/test.ipynb
@@ -224,6 +224,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import seed\n",
+    "from random import randint\n",
+    "seed(5)\n",
+    "# = seed(5)\n",
+    "#c = seed(6)\n",
+    "print(randint(10,50))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.57\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random as rnd\n",
+    "from random import seed\n",
+    "\n",
+    "seed(10)\n",
+    "print(round(rnd(),2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -232,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('env': venv)",
+   "display_name": "Python 3.11.0 64-bit ('3.11.0')",
    "language": "python",
    "name": "python3"
   },
@@ -246,12 +291,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
+    "hash": "9e67aa080b8c1c4d6e24d2b5c9e4edecc235517ee5352f63b29e74ed8b9c94da"
    }
   }
  },
